Bug 314580 - A customized toolbar makes settings entries disappear in menu
Summary: A customized toolbar makes settings entries disappear in menu
Status: RESOLVED FIXED
Alias: None
Product: kile
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.1.3
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Michel Ludwig
URL:
Keywords:
: 317717 322186 337663 342378 350185 354640 379435 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-02-07 07:20 UTC by Thomas Schwarzgruber
Modified: 2017-09-02 08:58 UTC (History)
18 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.9.91
Sentry Crash Report:


Attachments
a picture of the tool bar (8.78 KB, image/jpeg)
2015-10-30 12:34 UTC, Amnon
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Schwarzgruber 2013-02-07 07:20:14 UTC
If I customize the toolbar in kile (I add the "set current document as master document" as a button), the menu entries related to kile in Settings will disappear (Settings-> Kile settings, Shortcuts etc) as well as kile specific entries in the Help menu (for instance the about Kile entry, also the Kile specific manual entry etc...). If I reset the toolbar configuration to the Default configuration, those entries reappear.

Reproducible: Always

Steps to Reproduce:
1.Customize Toolbar by adding a Button
2. Look in Settings menu and see that some kile specific entries disappeared
Actual Results:  
kile specific entries disappeared.

Expected Results:  
No change in any Menu bar entry.
Comment 1 Gerald Senarclens de Grancy 2013-03-04 17:09:47 UTC
This also reproduces in a fresh build of Kile 3 beta (pulled today).
Comment 2 Gerald Senarclens de Grancy 2013-03-04 17:16:01 UTC
A (not to nice) workaround to get the normal menu entries back is to delete or move ~/.kde/share/apps/kile/kileui.rc - however, doing so, the customization of the toolbar are lost.
Comment 3 Michel Ludwig 2013-04-02 12:09:12 UTC
*** Bug 317717 has been marked as a duplicate of this bug. ***
Comment 4 Michel Ludwig 2013-04-02 12:10:55 UTC
A workaround for now is to remove noMerge="1" from the lines

  <Menu noMerge="1" name="settings">

and

  <Menu noMerge="1" name="help">

in ~/.kde4/share/apps/kile/kileui.rc
Comment 5 J Brauchle 2014-01-18 09:57:11 UTC
Is there any progress and / or anyone working on getting this fixed? 

From the workaround it seems like just a small problem, but the impact on daily work with kile is big, as settings cannot be changed without the missing menu item.
Comment 6 Christoph Feck 2014-01-25 22:50:20 UTC
It may be related to bug 64754 (in other words, not a Kile bug).
Comment 7 Christoph Feck 2014-07-22 03:43:19 UTC
*** Bug 337663 has been marked as a duplicate of this bug. ***
Comment 8 Christoph Feck 2015-01-14 17:05:08 UTC
*** Bug 342378 has been marked as a duplicate of this bug. ***
Comment 9 Caqui 2015-07-17 08:31:49 UTC
*** Bug 350185 has been marked as a duplicate of this bug. ***
Comment 10 Amnon 2015-10-30 12:31:03 UTC
In my KILE the "configure kile" menu item disappeared  a long time ago. 

I am using the workaround of an icon ...
Comment 11 Amnon 2015-10-30 12:34:35 UTC
Created attachment 95223 [details]
a picture of the tool bar
Comment 12 Christoph Feck 2015-11-04 14:29:37 UTC
*** Bug 322186 has been marked as a duplicate of this bug. ***
Comment 13 Christoph Feck 2015-11-04 14:29:56 UTC
*** Bug 354640 has been marked as a duplicate of this bug. ***
Comment 14 Nobody 2015-11-16 10:44:11 UTC
Hi,
i have the same issue! witch the following system! 

kate 3.7
KDE 4.14.2
3.13.0-68-generic #111-Ubuntu x86_64
Comment 15 ericd13 2016-10-27 12:57:22 UTC
Same problem here, very annoying.
I don't understand why it has not been fixed yet.

I use Kile Version 2.1.3 within Manjaro distribution.
Comment 16 Christoph Feck 2016-10-27 13:51:56 UTC
Please try the KF5 version of Kile (on KF5 5.24 or better), see also comment #6.
Comment 17 merlin 2017-01-07 11:44:28 UTC
This bug is still present in current snapshot from github (KF5 5.29)

Workaround: change one line in local file kileui.rc from

 <Menu noMerge="1" name="settings">

to 

 <Menu name="settings">
Comment 18 Michael D 2017-03-23 09:21:49 UTC
Sorry, but may I ask where kileui.rc is located? I can't find it anywhere in my home folder. Also, I am using the KF5 version of Kile and the bug is still present, specifically version 2.9.60.
Comment 19 Christoph Feck 2017-03-24 21:13:34 UTC
~/share/kxmlgui5/kile/kileui.rc
Comment 20 krichter 2017-06-29 08:29:02 UTC
`~/.kde/share/apps/kile/kileui.rc` on Ubuntu 17.04 with kile 2.1.3/KDE 4.14.30.
Comment 21 Michel Ludwig 2017-09-02 07:15:09 UTC
Git commit 178540ba53a21c8910e210c54518e93de54dd1a7 by Michel Ludwig.
Committed on 02/09/2017 at 07:13.
Pushed by mludwig into branch 'master'.

Prevent toolbar modifications from changing menus

Also start to simplify the user menu code.
FIXED-IN: 2.9.91

M  +19   -16   src/kile.cpp
M  +2    -2    src/kile.kcfg
M  +28   -25   src/usermenu/usermenu.cpp
M  +12   -3    src/usermenu/usermenu.h
M  +5    -5    src/widgets/usermenuconfigwidget.cpp

https://commits.kde.org/kile/178540ba53a21c8910e210c54518e93de54dd1a7
Comment 22 Michel Ludwig 2017-09-02 08:58:14 UTC
*** Bug 379435 has been marked as a duplicate of this bug. ***