Prevent toolbar modifications from changing menus

Also start to simplify the user menu code.

BUG: 314580
FIXED-IN: 2.9.91